<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bencinas</string>
    <string name="version_number">1.0</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Buscar Estaciones de Servicio</string>
    <string name="title_section2">Estaciones de Servicio Cercanas</string>
    <string name="title_section3">Más Info</string>
    <string name="benzine_detail">Estación de Servicio</string>

    <!-- BÚSQUEDA DE ESTACIONES DE SERVICIO -->
    <string name="commune_text">Seleccione la región y comuna en la que desea buscar Estaciones de Servicio:</string>
    <string name="commune_spinner_label">Seleccione la Comuna</string>
    <string name="region_spinner_label">Seleccione la Región</string>
    <string name="region_or_commune_not_selected">Seleccione la Región y la Comuna para realizar la búsqueda</string>

    <!-- DETALE DE ESTACIONES DE SERVICIO -->
    <string name="btn_email">Email</string>
    <string name="btn_report">Denunciar</string>
    <string name="btn_llevame">Ruta</string>
    <string name="btn_llamar">Llamar</string>
    <string name="btn_share">Compartir</string>
    <string name="lista_tlfs">Lista de telefonos</string>
    <string name="menu_compartir">Compartir</string>
    <string name="info_marker_text">Ver detalle</string>
    <string name="current_day">DÍA:</string>
    <string name="detail_gasoline_93">Gas 93</string>
    <string name="detail_gasoline_95">Gas 95</string>
    <string name="detail_gasoline_97">Gas 97</string>
    <string name="detail_diesel">Diesel</string>
    <string name="detail_kerosene">Kerosene</string>
    <string name="detail_btn">Detail</string>
    <string name="detail_not_available">No Tiene</string>
    <string name="more_benzine_station">Encuentra más estaciones de servicio: http://play.google.com/store/apps/details?id=</string>

    <!-- CARGA INICIAL -->
    <string name="exit">Salir</string>
    <string name="initialization_error">No se pudieron obtener los datos, intente nuevamente más tarde.</string>
    <string name="no_conection_error">Verifique su conexión a internet e intente nuevamente más tarde.</string>
    <string name="loading">Cargando</string>
    <string name="play_service_not_available">Su dispositivo no cuenta con Google Play Service.</string>
    <string name="download_new_information_error">No se pudieron obtener los datos para el día en curso, intente nuevamente más tarde.</string>

    <!-- INFORMATION -->
    <string name="version">Versión: </string>

    <!-- REPORTE DE ESTACION DE SERVICIO -->
    <string name="benzine_complaint_title">Denunciar Estación de Servicio</string>
    <string name="benzine_complaint_name">Nombre completo</string>
    <string name="benzine_complaint_email">Correo electrónico</string>
    <string name="benzine_complaint_text">Indique los reportes que puedan ayudarnos a mejorar</string>
    <string name="benzine_complaint_thake_photo">Tomar una foto</string>
    <string name="benzine_complaint_email_subject">Denunciar:</string>
    <string name="benzine_complaint_email_intent">Enviar vía email…</string>
    <string name="benzine_complaint_msg_empty">Ingrese un mensaje</string>
    <string name="benzine_complaint_name_empty">Ingrese su nombre</string>
    <string name="benzine_complaint_email_empty">Ingrese su correo electrónico</string>
    <string name="benzine_complaint_camera_error">Camara no disponible, intente nuevamente más tarde</string>
    <string name="benzine_complaint_image_not_attached">La foto no pudo ser adjuntada</string>
    <string name="benzine_complaint_sent_report_ok">El reporte fue enviado de forma exitosa</string>
    <string name="benzine_complaint_sent_report_problem">Hubo un error en el envío del reporte, intente nuevamente más tarde</string>
    <string name="benzine_complaint_wait">Aguarde un instante</string>
    <string name="benzine_complaint_sending">Enviando el reporte...</string>
    <string name="benzine_complaint_view_photo">Ver Foto</string>
    <string name="benzine_complaint_sent_cancel">Cancelar</string>
    <string name="benzine_complaint_sent_report_canceled">El envío fue cancelado</string>
    <string name="benzine_complaint_select_reason">Por favor seleccione un motivo de denuncia</string>
    <string name="benzine_complaint_reason_spinner_label">Seleccione el Motivo</string>

    <!-- CONFIG MAPA -->
    <string name="map_config_title">Configuración</string>
    <string name="map_config_message">Rango de distancia\nValor actual: # mts</string>
    <string name="map_config_notification_message">Notif. Sonoras:</string>
    <string name="map_config_notification_message_information">Recibirá notificación con el mejor precio de bencina.</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="actual_location">Ubicación actual</string>
    <string name="ic_action_settings">Configuración</string>
    <string name="ic_refresh">Actualizar Mapa</string>
    <string name="map_config_location_title">Localización desactivada</string>
    <string name="map_config_location">La localización por medio de Wi-Fi y Red Movil está desactivada, Quieres activarla?"</string>
    <string name="btn_location_accept">Aceptar</string>
    <string name="btn_location_cancel">Cancelar</string>

    <!-- MAP -->
    <string name="no_benzine_in_range">No se encontraron estaciones de servicio en el rango de búsqueda</string>

    <!-- LISTADO DE ESTACIONES DE SERVICIO -->
    <string name="nearby_benzine_text">Estaciones de Servicio Cercanas hasta</string>

    <!-- NOTIFICATION -->
    <string name="notification_title">Bencinera Cercana</string>
    <string name="notification_message">Presione aquí para acceder al detalle de la misma</string>

</resources>