<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/benzine_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/ic_content_paste"
            android:text=""
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/benzine_station_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/ic_location_place"
            android:gravity="center_vertical"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/take_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/celeste_bencinas"
            android:contentDescription="@string/benzine_complaint_thake_photo"
            android:drawableLeft="@drawable/ic_camera_white"
            android:text="@string/benzine_complaint_thake_photo"
            android:textAlignment="center"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/benzine_complaint_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/benzine_complaint_name"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/benzine_complaint_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/benzine_complaint_email"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/benzine_complaint_reason"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_selector"
            android:prompt="@string/benzine_complaint_reason_spinner_label"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/benzine_complaint_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/benzine_complaint_text"
            android:inputType="textMultiLine"
            android:lines="5" />
    </LinearLayout>

</ScrollView>